# protobuf_with_cmake

./: CMakeLists.txt  README.md  main.cpp
proto/: hello.proto
